Fixed spacing on empty shopping cart card

--- a/src/styles/ShoppingCart.scss
+++ b/src/styles/ShoppingCart.scss
@@ -16,6 +16,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     background-color: #f7f7f7;
     padding: 5rem;
     gap: 1rem;
